Se realizaron correcciones

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-acerca-de/edit-acerca-de.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-acerca-de/edit-acerca-de.component.html
@@ -107,7 +107,7 @@
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
               <div class="mb-3">
                 <br>
-                <button type="submit" class="btn btn-dark btn-sm" [disabled]="formAcerca.form.valid">Editar acerca de mi</button>
+                <button type="submit" class="btn btn-dark btn-sm" [disabled]="!formAcerca.form.valid">Editar acerca de mi</button>
               </div>
             </div>
           </div>
