Se elimino un archivo de asset

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-banner/edit-banner.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-banner/edit-banner.component.html
@@ -20,7 +20,7 @@
               <datalist id="datalistOptions">
                 <option value="./assets/banner1.png">
                 <option value="./assets/banner2.png">
-                <option value="./assets/banner3.png">
+                <option value="...">
                 <option value="...">
                 <option value="...">
               </datalist>
